test/fixtures/type-error/voidUnion.ro
fun y(): void = {
  // stub
}

fun x(a: i32): i32 = {
  var z = a match {
    case 1 -> 1
    case 2 -> y()
    else -> 3
  }
  z
}